change navbar alignment, add filter in catalog page, add jquery, fix link navbar brand, etc

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,11 +12,15 @@ body {
     @apply mx-20;
 }
 
+.filter-active {
+    @apply border-black text-black;
+}
+
 @media (min-width: 1024px) {
-    .active {
+    .nav-active {
         color: #000;
     }
-    .active::after {
+    .nav-active::after {
         content: "";
         display: block;
         width: 50%;
